--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,14 +1,14 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/unimanage   # replace 'mydb' with your database name
-    username: postgres                             # replace with your postgres user
-    password: admin                         # replace with your postgres password
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:unimanage}
+    username: ${DB_USER:postgres}
+    password: ${DB_PASS:admin}
     driver-class-name: org.postgresql.Driver
 
   jpa:
     hibernate:
-      ddl-auto: create     # options: none | validate | update | create | create-drop
-    show-sql: true         # logs SQL queries in the console
+      ddl-auto: create
+    show-sql: true
     properties:
       hibernate:
         format_sql: true
@@ -16,8 +16,21 @@ spring:
 
   sql:
     init:
-      mode: always         # runs schema/data.sql at startup if present
+      mode: always
       platform: postgres
 
+
 server:
-  port: 8080
+  port: 8443
+  ssl:
+    key-store: classpath:keystore.p12
+    key-store-password: unimanage #todo : use in .env
+    key-store-type: PKCS12
+    key-alias: myapp
+
+
+
+jwt:
+  private-key-path: "/keys/private.pem"
+  public-key-path: "/keys/public.pem"
+  expiration-time: 3_600_000
