--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,7 +18,7 @@ spring:
     init:
       mode: always
       platform: postgres
-
+#      schema-locations: scheme.sql
 
 server:
   port: 8443
@@ -30,7 +30,11 @@ server:
 
 
 
-jwt:
-  private-key-path: "/keys/private.pem"
-  public-key-path: "/keys/public.pem"
-  expiration-time: 3_600_000
+app:
+  security:
+    jwt:
+      access-token-expiration: 86400000
+      refresh-token-expiration: 604800000
+
+
+
